# plp-haskell

./: .gitignore  FinalProject.cabal  README.md
app/: .#Main.hs  Main.hs
docs/: proposal.tex  type-systems.org
input/: line-segments
lib/: BentleyOttmann.hs  BinTree.hs  Example.hs  ExerciseSolutions.hs  HTMLEscaping.hs  LineSegment.hs  MyList.hs  Queue.hs  RedBlackTree.hs
test/: BentleyOttmannSpec.hs  BinaryTreeSpec.hs  QueueSpec.hs  RedBlackTreeSpec.hs  Spec.hs
