name:                FinalProject
version:             0.1.0.0
synopsis:            Final project for Programming Language Paradigms
description:         Please see README.md
homepage:            https://github.com/jcolemang/plp-haskell
author:              James Coleman Gibson, Kieran Groble, Jenna Wohlpart
maintainer:          gibsonjc@rose-hulman.edu
copyright:           2017 James Coleman Gibson
category:            Algorithm
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     RedBlackTree
                     , LineSegment
                     , HTMLEscaping
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable final-project-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -XKindSignatures
  build-depends:       base
                     , FinalProject
  default-language:    Haskell2010

test-suite final-project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , lib
  main-is:             Spec.hs
  build-depends:       base
                     , FinalProject
                     , HUnit
  other-modules:       RedBlackTree
                     , RedBlackTreeSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jcolemang/plp-haskell
